--- a/index.html
+++ b/index.html
@@ -1,125 +1,79 @@
-<!-- Existen dos tipos de etiqueta: -->
 <!DOCTYPE html>
-<html lang="es">
-<head>
-<!--los metadatos es información para el navegador-->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0", initial-scale=1.0>
-    <meta name="keywoeds" content="curso-web, html">
+ <html lang="es">
+   <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="keywords" content="curso-web, html ">
 
-    <title>Curso html</title>
-</head>
-<body>
-    <h1>Encabezado principal</h1>
-    <h2>subtitulo</h2>
-    <h6>ultimo encabezado</h6>
-    <p>Este es un parrafo<br/>
-        <b>Hola</b>
-        <i>primer curso</i>
-        <span>parte del parrafo que quiero resaltar </span>
-    </p>
-    <h2>LISTAS: </h2>
-    <h3>Listas Ordenadas</h3>
-    <ol>
-        <li>elemento 1</li>
-        <li>elemento 2</li>
-    </ol>
-    <h3>Listas Desordenada</h3>
-    <ul>
-        <li> elemento 1</li>
-        <li> elemento 2</li>
-        <li> elemento 3</li>
-    </ul>
-   
-    <h3>Listas de Definicion</h3>
+      <!-- Enlazando  css -->
+     <link rel="stylesheet" href="./style.css">
+     <title>Curso html</title>
+   </head>
+   <body>
+     <!-- Contenido de mi página -->
+     <h1>Hello world 🌎</h1>
+     <!-- menu -->
+     <nav>
+       <ul>
+         <li>Item 1</li>
+         <li>Item 2</li>
+         <li>Item 3</li>
+       </ul>
+     </nav>
+     <!-- Camz section -->
+     <section id="CamzSection">
+       <article class="styleArticle article-flex">
+         <img
+             src="https://s6.eestatic.com/2018/01/26/actualidad/Actualidad_280236224_62446614_1024x576.jpg"  
+             alt="imagendecamz"
+         />
+         <div>
+           <h2>Camila Cabello</h2>
+           <p>
+             Es una cantante y compositora cubano-estadounidense de ascendencia mexicana. 
+             Conocida por haber formado parte del grupo femenino Fifth Harmony.
+           </p>
+         </div>
+       </article>
+     </section>
+     <!-- Fede section -->
+     <section id="fedeSection">
+       <article class="styleArticle">
+         <img
+             src="https://pm1.narvii.com/6565/d094647cd91c11fd5b1c16d57f6ac7bbdac021bb_00.jpg"          
+             alt="Fede"
+         />
 
-    <dl>
-        <dt>Termino</dt>
-        <dd>Definicion</dd>
-    </dl>
-    
-    <h2>Enlaces o hipervinculos</h2>
-    <a href="https://www.google.com" target="_blank"
-    title="a-google">google</a>
-    <a href="#">Home</a>
-    <a href="#id"></a>
-    <!--Para direccionarnos a una seccion se necesita poner en href="#[id del elemento]"-->
+          <h2>Federico Vigevani</h2>
+         <p>
+             Es un youtuber uruguayo (residente en México).
+             Conocido por haber sido uno de los dos miembros del canal, dosogas.
+             Actualmente cuenta con mas de 6.5 millones de suscriptores en youtube.
+         </p>
+       </article>
+     </section>
+     <ul>
+       <li>Item 1</li>
+       <li>Item 2</li>
+       <li>Item 3</li>
+     </ul>
+     <footer>
+       copyright &copy
+     </footer>
 
-    <h2>Imagenes</h2>
-    <img 
-        src="https://www.pngfind.com/mpng/iTbJbbi_camila-cabello-images-in-collection-page-png-pack/"
-        alt="Imagen de Camz"
-    />"
-
-    <!-- <video src="path/url">
-        <source src="path/urlVideo" type="video/mp4"/>
-    </video> -->
-    <h3>Tablas</h3>
-    <table>
-        <tr>
-            <td>Columna 1</td>
-            <td>Columna 2</td>
-        </tr>
-        <tr>
-            <td>Columna 1 - fila 2</td>
-            <td>Columna 2 - fila 2</td>
-        </tr>
-    </table>
-
-    <h3>Formularios</h3>
-    <form action="">
-        <fieldset><legend>Datos de usuario</legend>
-            <label for="idInput">Name</label>
-            <input type="text" id="idInput" name="nameUser"/>
-            <label for="">Comentario</label>
-            <textarea 
-                name="" 
-                id="" 
-                cols="30"
-                rows="10"
-                placeholder="comentario">
-            </textarea>
-            <button>Enviar</button>
-        </fieldset>
-    </form>
-
-    <!--Estructura semantica-->
-    <header>El encabezado de una pagina</header>
-    <!--Menu-->
-    <nav> <!--Se utiliza para los menus o tambien a agrupar, "es un navegador" puede tener otras funciones-->
-        <ul>
-            <li>
-                Elemento 1
-            </li>
-        </ul>
-    </nav>
-
-<!--Agrupar contenidos o elementos relacionados entre si-->
-    <section>
-        <h1>Seccion de musica</h1>
-
-<!--Mantener organizado elementos que no necesariamente estan relacionados-->
-        <article>
-            <h1>Encabezado 1</h1>
-        </article>
-        <article>
-            <h2>Encabezado 2</h2>
-        </article>
-    </section>
-
- <!--Publicidad o información extra que no necesariamente se relaciona con la página-->   
-    <aside>Informacion complementaria</aside>
-
-<!--Reserva derechos de autos-->
-    <footer>copyrigth &copy;</footer>
-    <main>
-        Resalta la parte principal de la pagina
-    </main>
-    <nav>agrupar</nav>
-    <dl>
-        <dt>div</dt>
-            <dd>Sirve para seccionar pero tambien para dar formato con CSS</dd>
-
-    </dl>
-</body>
-</html>
+      <section class="wrapper-flex">
+       <div class="square">
+         1
+       </div>
+       <div class="square">
+         2
+       </div>
+       <div class="square">
+         3
+       </div>
+       <div class="square squire4">
+         4
+       </div>
+     </section>
+   </body>
+ </html> 
