--- a/index.html
+++ b/index.html
@@ -1,79 +1,120 @@
 <!DOCTYPE html>
- <html lang="es">
-   <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="keywords" content="curso-web, html ">
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="curso,Web,html,HTML">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Curso HTML</title>
+</head>
+<body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col">
 
-      <!-- Enlazando  css -->
-     <link rel="stylesheet" href="./style.css">
-     <title>Curso html</title>
-   </head>
-   <body>
-     <!-- Contenido de mi página -->
-     <h1>Hello world 🌎</h1>
-     <!-- menu -->
-     <nav>
-       <ul>
-         <li>Item 1</li>
-         <li>Item 2</li>
-         <li>Item 3</li>
-       </ul>
-     </nav>
-     <!-- Camz section -->
-     <section id="CamzSection">
-       <article class="styleArticle article-flex">
-         <img
-             src="https://s6.eestatic.com/2018/01/26/actualidad/Actualidad_280236224_62446614_1024x576.jpg"  
-             alt="imagendecamz"
-         />
-         <div>
-           <h2>Camila Cabello</h2>
-           <p>
-             Es una cantante y compositora cubano-estadounidense de ascendencia mexicana. 
-             Conocida por haber formado parte del grupo femenino Fifth Harmony.
-           </p>
-         </div>
-       </article>
-     </section>
-     <!-- Fede section -->
-     <section id="fedeSection">
-       <article class="styleArticle">
-         <img
-             src="https://pm1.narvii.com/6565/d094647cd91c11fd5b1c16d57f6ac7bbdac021bb_00.jpg"          
-             alt="Fede"
-         />
+            </div>
+        </div>
+    </div>
 
-          <h2>Federico Vigevani</h2>
-         <p>
-             Es un youtuber uruguayo (residente en México).
-             Conocido por haber sido uno de los dos miembros del canal, dosogas.
-             Actualmente cuenta con mas de 6.5 millones de suscriptores en youtube.
-         </p>
-       </article>
-     </section>
-     <ul>
-       <li>Item 1</li>
-       <li>Item 2</li>
-       <li>Item 3</li>
-     </ul>
-     <footer>
-       copyright &copy
-     </footer>
-
-      <section class="wrapper-flex">
-       <div class="square">
-         1
-       </div>
-       <div class="square">
-         2
-       </div>
-       <div class="square">
-         3
-       </div>
-       <div class="square squire4">
-         4
-       </div>
-     </section>
-   </body>
- </html> 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown link
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <form>
+                    <div class="form-row">
+                      <div class="form-group col-md-6">
+                        <label for="inputEmail4">Email</label>
+                        <input type="email" class="form-control" id="inputEmail4">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label for="inputPassword4">Password</label>
+                        <input type="password" class="form-control" id="inputPassword4">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="inputAddress">Address</label>
+                      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    </div>
+                    <div class="form-group">
+                      <label for="inputAddress2">Address 2</label>
+                      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                    </div>
+                    <div class="form-row">
+                      <div class="form-group col-md-6">
+                        <label for="inputCity">City</label>
+                        <input type="text" class="form-control" id="inputCity">
+                      </div>
+                      <div class="form-group col-md-4">
+                        <label for="inputState">State</label>
+                        <select id="inputState" class="form-control">
+                          <option selected>Choose...</option>
+                          <option>...</option>
+                        </select>
+                      </div>
+                      <div class="form-group col-md-2">
+                        <label for="inputZip">Zip</label>
+                        <input type="text" class="form-control" id="inputZip">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                          Check me out
+                        </label>
+                      </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                  </form>
+            </div>
+            <div class="col-6">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <div class="row px-md-n5">
+            <div class="col-12">
+                <button type="button" class="btn btn-primary btn-lg btn-block">Primary</button>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
