--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="java, html " />
-    <title>JAVASCRIPT--</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aprendiendo DOM</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
-     <!--my js-->
-    <script src="./index.js"></script>
+  <section id='notes'>
+    <h1>Notas Danahe</h1>
+    <ul class="list">
+      <li>Accediendo por id</li>
+      <li>Accediendo por clase</li>
+      <li>Accediendo por tagName</li>
+    </ul>
+    <a class='button'>Click Me</a>
+  </section>
+  <section id='remainders'>
+    <h1>Recordatorios</h1>
+  </section>
+  <script src="./js/index.js"> </script>
 </body>
-</html>   
+</html>
