--- a/index.html
+++ b/index.html
@@ -3,31 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DOM</title>
-  <link rel="stylesheet" href="./css/styles.css">
+  <title>Document</title>
 </head>
 <body>
-  <section class="calc-container">
-    <input type="text" id='result' placeholder="0" class="display">
-    <div class='btns-container'>
-      <input name="number" type="submit" value="1">
-      <input name="number" type="submit" value="2">
-      <input name="number" type="submit" value="3">
-      <input name='operator' type="submit" value="+">
-      <input name="number" type="submit" value="4">
-      <input name="number" type="submit" value="5">
-      <input name="number" type="submit" value="6">
-      <input name='operator'  type="submit" value="-">
-      <input name="number" type="submit" value="7">
-      <input name="number" type="submit" value="8">
-      <input name="number" type="submit" value="9">
-      <input name='operator' type="submit" value="/">
-      <input name='delete'  type="submit" value="C">
-      <input name="number" type="submit" value="0">
-      <input name='equal' type="submit" value="=">
-      <input name='operator'  type="submit" value="x">
-    </div>
-  </section>
-  <script src="./js/app.js"></script>
+  <form id='form'>
+    <label for="name">Nombre:</label>
+    <input for="name" id="name" name="name">
+    <label for="lastName">Apellidos:</label>
+    <input for="lastName" id="lastName" name="lastName">
+    <label for="age">Edad:</label>
+    <input type="number" id="age" name="age">
+    <input type="submit" id="button" value="Enviar">
+  </form> 
+
+  <div > 
+    <h1>DATOS DEL USUARIO</h1>
+    <hr>
+    <p id="pName">Nombre: <span></span></p>
+    <p id="pLastName">Apellido: <span></span></p>
+    <p id="pAge">Age: <span></span></p>
+  </div>
+
+  <script src="./js/main.js"></script>
 </body>
 </html>
