--- a/index.html
+++ b/index.html
@@ -6,24 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <form id='form'>
-    <label for="name">Nombre:</label>
-    <input for="name" id="name" name="name">
-    <label for="lastName">Apellidos:</label>
-    <input for="lastName" id="lastName" name="lastName">
-    <label for="age">Edad:</label>
-    <input type="number" id="age" name="age">
-    <input type="submit" id="button" value="Enviar">
-  </form> 
-
-  <div > 
-    <h1>DATOS DEL USUARIO</h1>
-    <hr>
-    <p id="pName">Nombre: <span></span></p>
-    <p id="pLastName">Apellido: <span></span></p>
-    <p id="pAge">Age: <span></span></p>
-  </div>
-
+  <div id=container></div>
   <script src="./js/main.js"></script>
 </body>
 </html>
